feat: 제출/자료 관리자 화면에 팀 단위 구분 표시 및 ZIP 다운로드 중복 제거
같은 팀 소속 제출자는 화면에서 그룹으로 묶어 보여주고, 팀 전체 선택 토글을 추가.
팀원들의 제출 파일은 동기화로 인해 동일 파일이므로 ZIP 다운로드 시 한 번만 포함되도록 수정.